[gd_scene load_steps=28 format=4 uid="uid://nfbtuu3hktn"]

[ext_resource type="Texture2D" uid="uid://c7bgp2cobcgwj" path="res://assets/sprites/tiles/tileset_custom.png" id="1_u5f0c"]
[ext_resource type="Script" uid="uid://bafoyf37gyeco" path="res://scripts/tutorial.gd" id="1_y0w3d"]
[ext_resource type="Script" uid="uid://bwodp7adgdd11" path="res://scripts/tile_manager.gd" id="2_0g6v0"]
[ext_resource type="Script" uid="uid://cakfg8wgq21f2" path="res://scripts/spawn_manager.gd" id="3_hvqni"]
[ext_resource type="PackedScene" uid="uid://tobpphuk4uh8" path="res://scenes/pickup.tscn" id="4_1qfbs"]
[ext_resource type="PackedScene" uid="uid://bxpiyjroigssq" path="res://scenes/Character.tscn" id="5_hf6er"]
[ext_resource type="PackedScene" uid="uid://diuwwqu7wjuyt" path="res://scenes/Fireplace.tscn" id="6_calcg"]
[ext_resource type="PackedScene" uid="uid://bgeltarnj35yy" path="res://scenes/Fountain.tscn" id="7_lyiqi"]
[ext_resource type="PackedScene" uid="uid://cpd7r5l12kfa1" path="res://scenes/Pit.tscn" id="8_l206y"]
[ext_resource type="PackedScene" uid="uid://oxngw4xxdnao" path="res://scenes/blurb.tscn" id="9_0g6v0"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_sifhu"]

[sub_resource type="NavigationPolygon" id="NavigationPolygon_gajge"]
vertices = PackedVector2Array(32, 32, -32, 32, -32, -32, 32, -32)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-32, -32, -32, 32, 32, 32, 32, -32)])
agent_radius = 0.0

[sub_resource type="NavigationPolygon" id="NavigationPolygon_ykok4"]
vertices = PackedVector2Array(32, 32, -32, 32, -32, -32, 32, -32)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-32, -32, -32, 32, 32, 32, 32, -32)])
agent_radius = 0.0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_sifhu"]
texture = ExtResource("1_u5f0c")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
0:0/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_gajge")
1:0/0 = 0
1:0/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_gajge")
0:1/0 = 0
0:1/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_gajge")
1:1/0 = 0
1:1/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_gajge")
2:0/0 = 0
2:0/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_gajge")
3:0/0 = 0
3:0/0/z_index = 2
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, -32, 32, 32, 32, 32, -32)
4:0/0 = 0
4:0/0/z_index = 2
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, -32, 32, 32, 32, 32, -32)
5:0/0 = 0
5:0/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_ykok4")
6:0/0 = 0
7:0/0 = 0
2:1/0 = 0
2:1/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_gajge")
3:1/0 = 0
3:1/0/z_index = 2
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
4:1/0 = 0
4:1/0/z_index = 2
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
5:1/0 = 0
5:1/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_ykok4")
6:1/0 = 0
7:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0

[sub_resource type="TileSet" id="TileSet_sqx0g"]
tile_size = Vector2i(64, 64)
physics_layer_0/collision_layer = 4
physics_layer_0/collision_mask = 2
physics_layer_0/physics_material = SubResource("PhysicsMaterial_sifhu")
navigation_layer_0/layers = 1
sources/0 = SubResource("TileSetAtlasSource_sifhu")

[sub_resource type="GDScript" id="GDScript_gajge"]
script/source = "extends Camera2D
"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_twv1b"]
size = Vector2(110, 198)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m6ekv"]
size = Vector2(698.875, 802.25)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ei5ly"]
size = Vector2(698.875, 601.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l206y"]
size = Vector2(1185.75, 969)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lyiqi"]
size = Vector2(637.5, 672)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_calcg"]
size = Vector2(601, 672)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hf6er"]
size = Vector2(451, 672)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hvqni"]
size = Vector2(622, 672)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1qfbs"]
size = Vector2(488, 595)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0g6v0"]
size = Vector2(929.5, 595)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cjgls"]
size = Vector2(160.75, 67)

[node name="TutorialRoot" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_y0w3d")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
y_sort_enabled = true
tile_map_data = PackedByteArray("AAAJAAEAAAACAAEAAAAJAAIAAAACAAEAAAAJAAMAAAACAAEAAAAJAAQAAAACAAEAAAAKAAQAAAACAAEAAAALAAQAAAACAAEAAAAMAAQAAAACAAEAAAANAAQAAAACAAEAAAAOAAMAAAACAAEAAAAOAAIAAAACAAEAAAAOAAEAAAACAAEAAAANAAEAAAACAAEAAAAMAAEAAAACAAEAAAALAAEAAAACAAEAAAAKAAEAAAACAAEAAAAKAAIAAAACAAEAAAAKAAMAAAACAAEAAAALAAMAAAACAAEAAAALAAIAAAACAAEAAAAMAAIAAAACAAEAAAANAAIAAAACAAEAAAAMAAMAAAACAAEAAAANAAMAAAACAAEAAAAOAAQAAAACAAEAAAAOAAAAAAACAAEAAAANAAAAAAACAAEAAAAMAAAAAAACAAEAAAALAAAAAAACAAEAAAAKAAAAAAACAAEAAAAJAAAAAAACAAEAAAAOAAUAAAACAAEAAAANAAUAAAACAAEAAAAMAAUAAAACAAEAAAALAAUAAAACAAEAAAAKAAUAAAACAAEAAAAJAAUAAAACAAEAAAAPAAIAAAACAAEAAAAPAAMAAAACAAEAAAAQAAMAAAACAAEAAAAQAAIAAAACAAEAAAARAAIAAAACAAEAAAARAAMAAAACAAEAAAASAAMAAAACAAEAAAASAAIAAAACAAEAAAARAAEAAAACAAEAAAARAAAAAAACAAEAAAASAAAAAAACAAEAAAASAAEAAAACAAEAAAARAP//AAACAAEAAAASAP//AAACAAEAAAATAP//AAACAAEAAAAUAP//AAACAAEAAAATAAAAAAACAAEAAAAUAAAAAAACAAEAAAAVAP//AAACAAEAAAAVAAAAAAACAAEAAAAWAAAAAAACAAEAAAAWAP//AAACAAEAAAAVAAEAAAACAAEAAAAVAAIAAAACAAEAAAAWAAIAAAACAAEAAAAWAAEAAAACAAEAAAAVAAMAAAACAAEAAAAWAAMAAAACAAEAAAAXAAMAAAACAAEAAAAXAAIAAAACAAEAAAAYAAAAAAACAAEAAAAYAAEAAAACAAEAAAAYAAIAAAACAAEAAAAYAAMAAAACAAEAAAAYAAQAAAACAAEAAAAZAAUAAAACAAEAAAAaAAUAAAACAAEAAAAbAAUAAAACAAEAAAAcAAUAAAACAAEAAAAdAAQAAAACAAEAAAAdAAMAAAACAAEAAAAdAAIAAAACAAEAAAAdAAEAAAACAAEAAAAdAAAAAAACAAEAAAAcAAAAAAACAAEAAAAbAAAAAAACAAEAAAAaAAAAAAACAAEAAAAZAAAAAAACAAEAAAAZAAEAAAACAAEAAAAZAAIAAAACAAEAAAAZAAMAAAACAAEAAAAZAAQAAAACAAEAAAAaAAQAAAACAAEAAAAaAAMAAAACAAEAAAAaAAIAAAACAAEAAAAaAAEAAAACAAEAAAAbAAEAAAACAAEAAAAbAAIAAAACAAEAAAAbAAMAAAACAAEAAAAbAAQAAAACAAEAAAAcAAEAAAACAAEAAAAcAAIAAAACAAEAAAAcAAMAAAACAAEAAAAcAAQAAAACAAEAAAAeAAIAAAACAAEAAAAeAAMAAAACAAEAAAAfAAMAAAACAAEAAAAfAAIAAAACAAEAAAAgAAMAAAACAAEAAAAgAAIAAAACAAEAAAAhAAMAAAACAAEAAAAhAAIAAAACAAEAAAAiAAMAAAACAAEAAAAiAAIAAAACAAEAAAAZAP//AAACAAEAAAAaAP//AAACAAEAAAAbAP//AAACAAEAAAAcAP//AAACAAEAAAAhAAEAAAACAAEAAAAhAAAAAAACAAEAAAAiAAAAAAACAAEAAAAiAAEAAAACAAEAAAAhAAQAAAACAAEAAAAhAAUAAAACAAEAAAAhAAYAAAACAAEAAAAiAAYAAAACAAEAAAAiAAUAAAACAAEAAAAjAAUAAAACAAEAAAAjAAQAAAACAAEAAAAiAAQAAAACAAEAAAAkAAUAAAACAAEAAAAlAAUAAAACAAEAAAAmAAUAAAACAAEAAAAkAAYAAAACAAEAAAAjAAYAAAACAAEAAAAlAAYAAAACAAEAAAAmAAYAAAACAAEAAAAmAAQAAAACAAEAAAAmAAMAAAACAAEAAAAmAAIAAAACAAEAAAAmAAEAAAACAAEAAAAmAAAAAAACAAEAAAAlAAAAAAACAAEAAAAkAAAAAAACAAEAAAAjAAAAAAACAAEAAAAjAAEAAAACAAEAAAAjAAIAAAACAAEAAAAjAAMAAAACAAEAAAAkAAQAAAACAAEAAAAkAAMAAAACAAEAAAAkAAIAAAACAAEAAAAkAAEAAAACAAEAAAAlAAEAAAACAAEAAAAlAAIAAAACAAEAAAAlAAMAAAACAAEAAAAlAAQAAAACAAEAAAAnAAAAAAACAAEAAAAnAAEAAAACAAEAAAAnAAIAAAACAAEAAAAnAAMAAAACAAEAAAAnAAQAAAACAAEAAAAnAAUAAAACAAEAAAAnAAYAAAACAAEAAAAhAP//AAACAAEAAAAiAP//AAACAAEAAAAjAP//AAACAAEAAAAkAP//AAACAAEAAAAlAP//AAACAAEAAAAmAP//AAACAAEAAAAnAP//AAACAAEAAAAoAP//AAACAAEAAAAoAAAAAAACAAEAAAAoAAEAAAACAAEAAAAoAAIAAAACAAEAAAAoAAMAAAACAAEAAAAoAAQAAAACAAEAAAAoAAUAAAACAAEAAAAoAAYAAAACAAEAAAApAAUAAAACAAEAAAAqAAUAAAACAAEAAAApAAQAAAACAAEAAAAqAAQAAAACAAEAAAArAAQAAAACAAEAAAArAAUAAAACAAEAAAAsAAUAAAACAAEAAAAtAAUAAAACAAEAAAAsAAQAAAACAAEAAAAsAAMAAAACAAEAAAAtAAMAAAACAAEAAAAtAAQAAAACAAEAAAAsAAIAAAACAAEAAAAsAAEAAAACAAEAAAAtAAEAAAACAAEAAAAtAAIAAAACAAEAAAAuAAEAAAACAAEAAAAuAAIAAAACAAEAAAAJAP//AAADAAAAAAAKAP//AAADAAAAAAALAP//AAADAAAAAAAMAP//AAADAAAAAAANAP//AAADAAAAAAAOAP//AAADAAAAAAAIAP//AAAEAAEAAAAIAAAAAAAEAAEAAAAIAAEAAAAEAAEAAAAIAAIAAAAEAAEAAAAIAAMAAAAEAAEAAAAIAAQAAAAEAAEAAAAIAAUAAAAEAAEAAAAIAAYAAAADAAAAAAAJAAYAAAADAAAAAAAKAAYAAAADAAAAAAALAAYAAAADAAAAAAAMAAYAAAADAAAAAAANAAYAAAADAAAAAAAOAAYAAAADAAAAAAAPAAYAAAAEAAEAAAAPAAUAAAAEAAEAAAAPAAQAAAAEAAEAAAAQAAQAAAADAAAAAAARAAQAAAADAAAAAAASAAQAAAADAAAAAAAVAAQAAAADAAAAAAAWAAQAAAADAAAAAAAXAAQAAAAEAAAAAAAYAAUAAAAEAAEAAAAZAAYAAAADAAAAAAAaAAYAAAADAAAAAAAbAAYAAAADAAAAAAAcAAYAAAADAAAAAAAdAAUAAAAEAAEAAAAeAAQAAAAEAAEAAAAfAAQAAAADAAAAAAAgAAQAAAAEAAEAAAAhAAcAAAADAAAAAAAiAAcAAAADAAAAAAAjAAcAAAADAAAAAAAkAAcAAAADAAAAAAAlAAcAAAADAAAAAAAmAAcAAAADAAAAAAAnAAcAAAADAAAAAAAoAAcAAAADAAAAAAApAAYAAAAEAAAAAAAqAAYAAAADAAAAAAArAAYAAAADAAAAAAAsAAYAAAADAAAAAAAtAAYAAAADAAAAAAAuAAMAAAAEAAAAAAAuAAAAAAADAAEAAAAtAAAAAAADAAEAAAAsAAAAAAADAAEAAAArAAMAAAADAAEAAAAqAAMAAAADAAEAAAApAAMAAAADAAEAAAAhAP7/AAADAAEAAAAiAP7/AAADAAEAAAAjAP7/AAADAAEAAAAkAP7/AAADAAEAAAAlAP7/AAADAAAAAAAmAP7/AAADAAAAAAAnAP7/AAADAAAAAAAoAP7/AAADAAAAAAAZAP7/AAADAAAAAAAaAP7/AAADAAAAAAAbAP7/AAADAAAAAAAcAP7/AAADAAAAAAAdAP//AAADAAAAAAAeAAEAAAADAAAAAAAfAAEAAAADAAAAAAAgAAEAAAADAAAAAAAXAAEAAAADAAAAAAAYAP//AAADAAAAAAARAP7/AAADAAAAAAASAP7/AAADAAAAAAATAP7/AAADAAAAAAAUAP7/AAADAAAAAAAVAP7/AAADAAAAAAAWAP7/AAADAAAAAAATAAEAAAAEAAAAAAAUAAEAAAAEAAAAAAAPAAEAAAADAAEAAAAQAAEAAAADAAAAAAAPAAAAAAAEAAAAAAAPAP//AAAEAAAAAAATAAQAAAADAAAAAAATAAMAAAAEAAAAAAATAAIAAAAEAAAAAAAUAAIAAAAEAAAAAAAUAAQAAAADAAAAAAAUAAMAAAAEAAAAAAAQAAAAAAAEAAAAAAAQAP//AAAEAAAAAAAQAP7/AAAEAAEAAAAXAAAAAAAEAAAAAAAXAP//AAAEAAEAAAAXAP7/AAAEAAAAAAAeAAAAAAAEAAEAAAAeAP//AAAEAAAAAAAdAP7/AAAEAAAAAAAYAP7/AAAEAAAAAAAXAAUAAAADAAEAAAAYAAYAAAADAAAAAAAdAAYAAAADAAEAAAAeAAUAAAADAAAAAAAgAAUAAAAEAAEAAAAgAAYAAAAEAAAAAAAgAAcAAAADAAAAAAApAAcAAAADAAAAAAApAAIAAAAEAAAAAAApAAEAAAAEAAAAAAApAAAAAAAEAAAAAAApAP//AAAEAAAAAAApAP7/AAAEAAAAAAAgAAAAAAAEAAAAAAAgAP//AAAEAAAAAAAgAP7/AAAEAAAAAAArAAIAAAAEAAAAAAArAAEAAAAEAAAAAAArAAAAAAAEAAAAAAAuAAYAAAADAAEAAAAuAAUAAAAEAAEAAAAuAAQAAAAEAAEAAAA5AAAAAAADAAEAAAA5AAEAAAAFAAEAAAA5AAIAAAACAAEAAAA5AAMAAAADAAAAAAA6AAAAAAADAAEAAAA6AAEAAAACAAEAAAA6AAIAAAACAAEAAAA6AAMAAAADAAAAAAA7AAAAAAADAAEAAAA7AAEAAAACAAEAAAA7AAIAAAACAAEAAAA7AAMAAAADAAAAAAA8AP//AAAEAAEAAAA8AAAAAAADAAEAAAA8AAEAAAACAAEAAAA8AAIAAAACAAEAAAA8AAMAAAAEAAAAAAA8AAQAAAADAAEAAAA9AP//AAADAAEAAAA9AAAAAAACAAEAAAA9AAEAAAACAAEAAAA9AAIAAAACAAEAAAA9AAMAAAACAAEAAAA9AAQAAAADAAAAAAA+AP//AAADAAEAAAA+AAAAAAACAAEAAAA+AAEAAAACAAEAAAA+AAIAAAACAAEAAAA+AAMAAAACAAEAAAA+AAQAAAADAAAAAAA/AP//AAADAAEAAAA/AAAAAAACAAEAAAA/AAEAAAACAAEAAAA/AAIAAAACAAEAAAA/AAMAAAACAAEAAAA/AAQAAAADAAAAAABAAP//AAADAAEAAABAAAAAAAACAAEAAABAAAEAAAACAAEAAABAAAIAAAACAAEAAABAAAMAAAACAAEAAABAAAQAAAADAAAAAABBAP//AAADAAEAAABBAAAAAAACAAEAAABBAAEAAAACAAEAAABBAAIAAAACAAEAAABBAAMAAAACAAEAAABBAAQAAAADAAAAAABCAP//AAAEAAEAAABCAAAAAAADAAEAAABCAAEAAAACAAEAAABCAAIAAAACAAEAAABCAAMAAAAEAAAAAABCAAQAAAADAAAAAABDAAAAAAADAAEAAABDAAEAAAAFAAEAAABDAAIAAAACAAEAAABDAAMAAAADAAAAAABEAAAAAAADAAEAAABEAAEAAAACAAEAAABEAAIAAAACAAEAAABEAAMAAAADAAAAAABFAAAAAAADAAEAAABFAAEAAAACAAEAAABFAAIAAAACAAEAAABFAAMAAAADAAAAAABGAP//AAACAAEAAABGAAAAAAACAAEAAABGAAEAAAACAAEAAABGAAIAAAACAAEAAABGAAMAAAADAAAAAABHAP//AAACAAEAAABHAAAAAAACAAEAAABHAAEAAAACAAEAAABHAAIAAAACAAEAAABHAAMAAAADAAAAAABIAP//AAACAAEAAABIAAAAAAAEAAAAAABIAAEAAAAEAAEAAABIAAIAAAAEAAEAAABIAAMAAAADAAEAAABJAP//AAACAAEAAABJAAAAAAADAAAAAABKAP//AAACAAEAAABKAAAAAAADAAAAAABLAP//AAACAAEAAABLAAAAAAADAAAAAABMAP//AAACAAEAAABMAAAAAAAEAAAAAABMAAEAAAAEAAAAAABMAAIAAAADAAAAAABNAAAAAAACAAEAAABNAAEAAAACAAEAAABNAAIAAAAEAAAAAABNAAMAAAADAAAAAABOAAAAAAACAAEAAABOAAEAAAACAAEAAABOAAIAAAACAAEAAABOAAMAAAADAAAAAABPAP3/AAACAAEAAABPAP7/AAACAAEAAABPAP//AAACAAEAAABPAAAAAAACAAEAAABPAAEAAAACAAEAAABPAAIAAAACAAEAAABPAAMAAAADAAAAAABQAP3/AAACAAEAAABQAP7/AAACAAEAAABQAP//AAACAAEAAABQAAAAAAACAAEAAABQAAEAAAACAAEAAABQAAIAAAACAAEAAABQAAMAAAADAAAAAABRAP3/AAACAAEAAABRAP7/AAACAAEAAABRAP//AAACAAEAAABRAAAAAAACAAEAAABRAAEAAAACAAEAAABRAAIAAAACAAEAAABRAAMAAAADAAAAAABSAP3/AAACAAEAAABSAP7/AAACAAEAAABSAP//AAACAAEAAABSAAAAAAACAAEAAABSAAEAAAACAAEAAABSAAIAAAACAAEAAABSAAMAAAADAAAAAABTAP3/AAACAAEAAABTAP7/AAACAAEAAABTAP//AAACAAEAAABTAAAAAAACAAEAAABUAP3/AAACAAEAAABUAP7/AAACAAEAAABUAP//AAACAAEAAABUAAAAAAACAAEAAABVAP3/AAACAAEAAABVAP7/AAACAAEAAABVAP//AAACAAEAAABVAAAAAAACAAEAAABWAPv/AAAEAAAAAABWAPz/AAAEAAEAAABWAP3/AAADAAEAAABWAP7/AAACAAEAAABWAP//AAACAAEAAABWAAAAAAAEAAAAAABWAAEAAAAEAAAAAABWAAIAAAADAAEAAABXAP3/AAADAAEAAABXAP7/AAACAAEAAABXAP//AAACAAEAAABXAAAAAAADAAAAAABYAP3/AAADAAEAAABYAP7/AAACAAEAAABYAP//AAACAAEAAABYAAAAAAADAAAAAABZAP3/AAADAAEAAABZAP7/AAACAAEAAABZAP//AAACAAEAAABZAAAAAAADAAAAAABaAP3/AAADAAEAAABaAP7/AAACAAEAAABaAP//AAACAAEAAABaAAAAAAADAAAAAABbAPz/AAAEAAEAAABbAP3/AAADAAEAAABbAP7/AAACAAEAAABbAP//AAACAAEAAABbAAAAAAAEAAAAAABbAAEAAAADAAAAAABcAPv/AAAEAAEAAABcAPz/AAADAAEAAABcAP3/AAACAAEAAABcAP7/AAACAAEAAABcAP//AAACAAEAAABcAAAAAAACAAEAAABcAAEAAAAEAAAAAABcAAIAAAAEAAEAAABcAAMAAAAEAAAAAABdAPv/AAADAAEAAABdAPz/AAACAAEAAABdAP3/AAACAAEAAABdAP7/AAACAAEAAABdAP//AAACAAEAAABdAAAAAAACAAEAAABdAAEAAAACAAEAAABdAAIAAAACAAAAAABdAAMAAAACAAAAAABeAPv/AAADAAEAAABeAPz/AAACAAEAAABeAP3/AAACAAEAAABeAP7/AAACAAEAAABeAP//AAACAAEAAABeAAAAAAACAAEAAABeAAEAAAACAAEAAABeAAIAAAACAAAAAABeAAMAAAACAAAAAABfAPv/AAAEAAAAAABfAPz/AAADAAEAAABfAP3/AAACAAEAAABfAP7/AAACAAEAAABfAP//AAACAAEAAABfAAAAAAACAAEAAABfAAEAAAAEAAAAAABfAAIAAAAEAAEAAABfAAMAAAAEAAAAAABgAPz/AAAEAAAAAABgAP3/AAADAAEAAABgAP7/AAACAAEAAABgAP//AAACAAEAAABgAAAAAAAEAAAAAABgAAEAAAADAAAAAABhAP3/AAAEAAAAAABhAP7/AAAEAAAAAABhAP//AAAEAAEAAABhAAAAAAADAAEAAAAvAAAAAAADAAEAAAAvAAEAAAACAAEAAAAvAAIAAAACAAEAAAAvAAMAAAADAAAAAAAwAAAAAAADAAEAAAAwAAEAAAACAAEAAAAwAAIAAAACAAEAAAAwAAMAAAADAAAAAAAxAP//AAAEAAAAAAAxAAAAAAADAAEAAAAxAAEAAAACAAEAAAAxAAIAAAACAAEAAAAxAAMAAAAEAAAAAAAxAAQAAAADAAAAAAAyAP7/AAAEAAAAAAAyAP//AAADAAEAAAAyAAAAAAACAAEAAAAyAAEAAAACAAEAAAAyAAIAAAACAAEAAAAyAAMAAAACAAEAAAAyAAQAAAAEAAAAAAAyAAUAAAADAAAAAAAzAP7/AAADAAEAAAAzAP//AAACAAEAAAAzAAAAAAACAAEAAAAzAAEAAAACAAEAAAAzAAIAAAACAAEAAAAzAAMAAAACAAEAAAAzAAQAAAACAAEAAAAzAAUAAAADAAAAAAA0AP7/AAADAAEAAAA0AP//AAACAAEAAAA0AAAAAAACAAEAAAA0AAEAAAACAAEAAAA0AAIAAAACAAEAAAA0AAMAAAACAAEAAAA0AAQAAAACAAEAAAA0AAUAAAADAAAAAAA1AP7/AAADAAEAAAA1AP//AAACAAEAAAA1AAAAAAACAAEAAAA1AAEAAAACAAEAAAA1AAIAAAACAAEAAAA1AAMAAAACAAEAAAA1AAQAAAACAAEAAAA1AAUAAAADAAAAAAA2AP7/AAADAAEAAAA2AP//AAACAAEAAAA2AAAAAAACAAEAAAA2AAEAAAACAAEAAAA2AAIAAAACAAEAAAA2AAMAAAACAAEAAAA2AAQAAAACAAEAAAA2AAUAAAADAAAAAAA3AP7/AAAEAAAAAAA3AP//AAADAAEAAAA3AAAAAAACAAEAAAA3AAEAAAACAAEAAAA3AAIAAAACAAEAAAA3AAMAAAACAAEAAAA3AAQAAAAEAAAAAAA3AAUAAAADAAAAAAA4AP//AAAEAAAAAAA4AAAAAAADAAEAAAA4AAEAAAACAAEAAAA4AAIAAAACAAEAAAA4AAMAAAAEAAAAAAA4AAQAAAADAAAAAABFAP3/AAAEAAAAAABFAP7/AAAEAAAAAABFAP//AAAEAAAAAABGAP3/AAADAAEAAABGAP7/AAACAAEAAABHAP3/AAADAAEAAABHAP7/AAACAAEAAABIAP3/AAADAAEAAABIAP7/AAACAAEAAABJAP3/AAADAAEAAABJAP7/AAACAAEAAABKAP3/AAADAAEAAABKAP7/AAACAAEAAABLAP3/AAADAAEAAABLAP7/AAACAAEAAABMAPv/AAAEAAEAAABMAPz/AAAEAAEAAABMAP3/AAADAAEAAABMAP7/AAACAAEAAABNAPr/AAAEAAEAAABNAPv/AAADAAEAAABNAPz/AAACAAEAAABNAP3/AAACAAEAAABNAP7/AAACAAEAAABNAP//AAACAAEAAABOAPr/AAADAAEAAABOAPv/AAACAAEAAABOAPz/AAACAAEAAABOAP3/AAACAAEAAABOAP7/AAACAAEAAABOAP//AAACAAEAAABPAPr/AAADAAEAAABPAPv/AAACAAEAAABPAPz/AAACAAEAAABQAPr/AAADAAEAAABQAPv/AAACAAEAAABQAPz/AAACAAEAAABRAPr/AAADAAEAAABRAPv/AAACAAEAAABRAPz/AAACAAEAAABSAPr/AAADAAEAAABSAPv/AAACAAEAAABSAPz/AAACAAEAAABTAPr/AAADAAEAAABTAPv/AAACAAEAAABTAPz/AAACAAEAAABTAAEAAAACAAEAAABTAAIAAAACAAEAAABTAAMAAAADAAAAAABUAPr/AAADAAEAAABUAPv/AAACAAEAAABUAPz/AAACAAEAAABUAAEAAAACAAEAAABUAAIAAAACAAEAAABUAAMAAAADAAAAAABVAPr/AAAEAAEAAABVAPv/AAADAAEAAABVAPz/AAACAAEAAABVAAEAAAACAAEAAABVAAIAAAAEAAAAAABVAAMAAAADAAEAAABbAAUAAAAEAAAAAABbAAYAAAAEAAEAAABbAAcAAAAEAAEAAABbAAgAAAAEAAAAAABbAAkAAAADAAEAAABcAAQAAAAEAAEAAABcAAUAAAADAAEAAABcAAYAAAACAAAAAABcAAcAAAACAAAAAABcAAgAAAACAAAAAABcAAkAAAAEAAEAAABcAAoAAAAEAAAAAABcAAsAAAAEAAAAAABcAAwAAAAEAAAAAABcAA0AAAADAAEAAABdAAQAAAACAAAAAABdAAUAAAACAAAAAABdAAYAAAACAAAAAABdAAcAAAACAAAAAABdAAgAAAACAAAAAABdAAkAAAACAAAAAABdAAoAAAACAAAAAABdAAsAAAACAAAAAABdAAwAAAAAAAAAAABdAA0AAAADAAAAAABeAAQAAAACAAAAAABeAAUAAAACAAAAAABeAAYAAAACAAAAAABeAAcAAAACAAAAAABeAAgAAAACAAAAAABeAAkAAAACAAAAAABeAAoAAAACAAAAAABeAAsAAAACAAAAAABeAAwAAAAAAAAAAABeAA0AAAADAAAAAABfAAQAAAAEAAAAAABfAAUAAAADAAAAAABfAAYAAAACAAAAAABfAAcAAAACAAAAAABfAAgAAAACAAAAAABfAAkAAAAEAAAAAABfAAoAAAAEAAEAAABfAAsAAAAEAAAAAABfAAwAAAAEAAAAAABfAA0AAAADAAEAAABgAAUAAAAEAAEAAABgAAYAAAAEAAEAAABgAAcAAAAEAAEAAABgAAgAAAAEAAAAAABgAAkAAAADAAEAAAA=")
tile_set = SubResource("TileSet_sqx0g")
script = ExtResource("2_0g6v0")

[node name="SpawnManager" type="Node2D" parent="."]
script = ExtResource("3_hvqni")

[node name="Timer" type="Timer" parent="SpawnManager"]
one_shot = true

[node name="Character" parent="." instance=ExtResource("5_hf6er")]
z_index = 1
position = Vector2(781, 158)

[node name="Camera2D" type="Camera2D" parent="Character"]
position = Vector2(-52, 42)
position_smoothing_enabled = true
script = SubResource("GDScript_gajge")

[node name="pickup" parent="." instance=ExtResource("4_1qfbs")]
position = Vector2(1729, 56)
type = "knife"

[node name="Pit2" parent="." instance=ExtResource("8_l206y")]
position = Vector2(5980, -223)

[node name="Pit" parent="." instance=ExtResource("8_l206y")]
position = Vector2(2142, -31)

[node name="Area2D2" type="Area2D" parent="."]
position = Vector2(4855, -67)
collision_layer = 2048
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
z_index = 1
shape = SubResource("RectangleShape2D_twv1b")

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(2120, 200)
collision_layer = 2048
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
z_index = 1
shape = SubResource("RectangleShape2D_twv1b")

[node name="Fireplace_Root" parent="." instance=ExtResource("6_calcg")]
position = Vector2(3293, -32)

[node name="blurb" parent="." instance=ExtResource("9_0g6v0")]

[node name="triggers" type="Node2D" parent="."]

[node name="8" type="Area2D" parent="triggers"]
position = Vector2(20838, 762)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="triggers/8"]
position = Vector2(-14884, -162.875)
shape = SubResource("RectangleShape2D_m6ekv")

[node name="7" type="Area2D" parent="triggers"]
position = Vector2(10419, 381)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="triggers/7"]
position = Vector2(-4463.4375, -507.75)
shape = SubResource("RectangleShape2D_ei5ly")

[node name="6" type="Area2D" parent="triggers"]
position = Vector2(9216, 376)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="triggers/6"]
position = Vector2(-4220, -324)
shape = SubResource("RectangleShape2D_l206y")

[node name="5" type="Area2D" parent="triggers"]
position = Vector2(3966, 188)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="triggers/5"]
position = Vector2(104, 12)
shape = SubResource("RectangleShape2D_lyiqi")

[node name="4" type="Area2D" parent="triggers"]
position = Vector2(6830, 40)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="triggers/4"]
position = Vector2(-3388.5, 157)
shape = SubResource("RectangleShape2D_calcg")

[node name="3" type="Area2D" parent="triggers"]
position = Vector2(3736, 20)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="triggers/3"]
position = Vector2(-839.5, 177)
shape = SubResource("RectangleShape2D_hf6er")

[node name="2" type="Area2D" parent="triggers"]
position = Vector2(1868, 10)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="triggers/2"]
position = Vector2(474, 184)
shape = SubResource("RectangleShape2D_hvqni")

[node name="1" type="Area2D" parent="triggers"]
position = Vector2(934, 5)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="triggers/1"]
position = Vector2(820, 203.5)
shape = SubResource("RectangleShape2D_1qfbs")

[node name="0" type="Area2D" parent="triggers"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="triggers/0"]
position = Vector2(1014.25, 203.5)
shape = SubResource("RectangleShape2D_0g6v0")

[node name="FountainRoot" parent="." instance=ExtResource("7_lyiqi")]
position = Vector2(5238, -288)

[node name="pickup2" parent="." instance=ExtResource("4_1qfbs")]
position = Vector2(4644, -69)
type = "mace"

[node name="exit" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="exit"]
position = Vector2(6019, 807.5)
shape = SubResource("RectangleShape2D_cjgls")

[connection signal="timeout" from="SpawnManager/Timer" to="SpawnManager" method="_on_timer_timeout"]
[connection signal="body_entered" from="Area2D2" to="." method="_on_area_2d_2_body_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="exit" to="." method="_on_exit_body_entered"]
